cambios en las variables de entorno

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gabriel Angeles",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
   },
   "dependencies": {
